page no longer breaks inside reult instances

--- a/ecolex/static/bootstrap/less/print.less
+++ b/ecolex/static/bootstrap/less/print.less
@@ -173,6 +173,7 @@ position: relative!important; top: -15px!important;
 }
 
     p {page-break-inside: avoid;}
+    li{page-break-inside:avoid;}
 
 
 @page {
